<resources>
    <string name="app_name">SignUpForm</string>

    <string name="name_label">Name</string>
    <string name="email_label">E-mail</string>
    <string name="pass_label">Password</string>
    <string name="repass_label">Re-type Password</string>
    <string name="save_button">Save</string>

    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter your e-mail</string>
    <string name="pass_hint">Type your password</string>
    <string name="repass_hint">Confirm password</string>
</resources>